Implement issue #5 changes