@@ -1,8 +1,8 @@
-import java.io.*;
+import java.io.IOException;
+import java.io.Serializable;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -24,12 +24,15 @@ public class Beverage implements Serializable {
     public void setName(String name) {
         this.name = name;
     }
+
     public void setPrice(int price) {
         this.price = price;
     }
+
     public void setCalories(int calories) {
         this.calories = calories;
     }
+
     public void setFlOz(int flOz) {
         this.flOz = flOz;
     }
@@ -38,35 +41,46 @@ public class Beverage implements Serializable {
     public String getName() {
         return name;
     }
+
     public int getPrice() {
         return price;
     }
+
     public int getCalories() {
         return calories;
     }
+
     public int getFlOz() {
         return flOz;
     }
 
     // Serialize object
     public static void serializeToCSV(Beverage beverage, String filename) throws IOException {
-        String filestring = beverage.getName() + "," + beverage.getPrice() + "," + beverage.getCalories() + "," + beverage.getFlOz();
-        Iterable<CharSequence> data = Collections.singleton(filestring);
         Path path = Paths.get(filename);
-        Files.write(path, data);
+        Files.writeString(path, prettyPrintCSV(beverage));
 
     }
 
     // Deserialize object
-    public static Beverage deserializeFromCSV(String filename) throws IOException, ClassNotFoundException {
+    public static Beverage deserializeFromCSV(String filename) throws IOException, OutOfMemoryError {
         Path path = Paths.get(filename);
         List<String> filedata = Files.readAllLines(path);
         String[] data = filedata.getFirst().split(",");
 
-        Beverage newBev = new Beverage(data[0], Integer.parseInt(data[1]), Integer.parseInt(data[2]), Integer.parseInt(data[3]));
+        // Default data values
+        for (int i = 0; i < data.length; i++) {
+            if (data[i] == null || data[i].isEmpty()){
+                data[i] = "0";
+            }
+        }
+
+        Beverage newBev = new Beverage(data[0].trim(), Integer.parseInt(data[1].trim()), Integer.parseInt(data[2].trim()), Integer.parseInt(data[3].trim()));
         return newBev;
     }
 
+    public static String prettyPrintCSV(Beverage beverage) {
+        return beverage.getName() + "," + beverage.getPrice() + "," + beverage.getCalories() + "," + beverage.getFlOz();
+    }
 
     @Override
     public boolean equals(Object o) {
@@ -76,8 +90,4 @@ public class Beverage implements Serializable {
         return price == beverage.price && calories == beverage.calories && flOz == beverage.flOz && Objects.equals(name, beverage.name);
     }
 
-    @Override
-    public int hashCode() {
-        return Objects.hash(name, price, calories, flOz);
-    }
 }
